Logs/log_2021 03 27 16.24.04.txt
2021-03-27 16:24:04,166 - 
Downloading Utility Log. 
Log started.

Move log to Impt Logs if required as only the 10 most recent logs are kept.

2021-03-27 16:24:05,807 - Command: dl -youtube https://www.youtube.com/channel/UCPxHg4192hLDpTI2w7F9rPg
2021-03-27 16:24:05,808 - youtube link
2021-03-27 16:24:05,811 - name 'Downloader' is parameter and global (youtube.py, line 110)
Traceback (most recent call last):
  File "c:/Utilities/Scripts/url-dl-v2/main.py", line 240, in <module>
    parse_input()
  File "c:/Utilities/Scripts/url-dl-v2/main.py", line 121, in parse_input
    from extractors.youtube import youtube_extractor
  File "c:\Utilities\Scripts\url-dl-v2\extractors\youtube.py", line 110
    global dl_object, Downloader
    ^
SyntaxError: name 'Downloader' is parameter and global
2021-03-27 16:24:05,812 - 
Log Ended.
Total time: 0 hrs 0 min 1.65 sec

